
2007-05-22  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/localweb.py, lib/registry.py,
	web/html-to-cgi, web/Makefile: Define URLs in just one place.

2007-05-22  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/make-maintain, bin/po-expire, bin/po-matrix, bin/postats-data,
	doc/files.all, doc/translators.all, lib/localweb.py, lib/registry.py,
	tools/tp_mirror.py: Change directory names: domains/POT -> POT-files,
	teams/PO -> PO-files, and maint -> latest-POs.

2007-05-22  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/registry: Put still required stuff back.

2007-05-22  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Simplify the messages, stop printing the ">"
	quote marks, stop including the mirror URLs.

2007-05-22  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/data.py, lib/registry.py, lib/sgml.py,
	bin/make-maintain, bin/postats-data: Clean up configuration
	and improve variable names.

2007-05-21  Benno Schulenberg  <benno@vertaalt.nl>

	*  doc/index.html, web/layout.html: Make links relative.

	*  doc/matrix.texi: Delete obsolete file.

2007-05-21  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/Makefile, registry/Makefile,  web/Makefile: Cleanups.

2007-05-21  Benno Schulenberg  <benno@vertaalt.nl>

	* Replace 'iro.umontreal.ca' with 'translationproject.org' in many
	places.

2007-05-20  Benno Schulenberg  <benno@vertaalt.nl>

	* tools/tp_mirror -> tools/tp_mirror.py: Rename file, tweak comments.
	
	* bin/make-maintain, bin/po-empty, bin/po-expire, bin/po-matrix,
	bin/po-tidy-links, bin/tp-robot: Comment tweaks.

2007-05-20  Benno Schulenberg  <benno@vertaalt.nl>

	* doc/DISLAIM: Make it a symlink instead of an identical copy.

2007-05-20  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/babylweb.py, lib/distroweb.py, web/babyl.cgi.in,
	web/distro.cgi.in: Remove obsolete files.

	* lib/data.py, lib/localweb.py, lib/Makefile, web/Makefile:
	Adjust for removal.

2007-05-19  Benno Schulenberg  <benno@vertaalt.nl>
